src/test/ui/generator/issue-48048.stderr
error[E0626]: borrow may still be in use when generator yields
  --> $DIR/issue-48048.rs:19:9
   |
LL |         x.0({ //~ ERROR borrow may still be in use when generator yields
   |         ^^^
LL |             yield;
   |             ----- possible yield occurs here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0626"
